--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "greenmeadowsward": {
+    "logangreenmeadows": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "baseHref": "./",
-            "outputPath": "dist/greenmeadowsward",
+            "outputPath": "dist/logangreenmeadows",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,19 +62,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "greenmeadowsward:build",
+            "browserTarget": "logangreenmeadows:build",
             "baseHref": "/"
           },
           "configurations": {
             "production": {
-              "browserTarget": "greenmeadowsward:build:production"
+              "browserTarget": "logangreenmeadows:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "greenmeadowsward:build"
+            "browserTarget": "logangreenmeadows:build"
           }
         },
         "test": {
@@ -111,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "greenmeadowsward:serve"
+            "devServerTarget": "logangreenmeadows:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "greenmeadowsward:serve:production"
+              "devServerTarget": "logangreenmeadows:serve:production"
             }
           }
         },
@@ -128,5 +128,5 @@
       }
     }
   },
-  "defaultProject": "greenmeadowsward"
+  "defaultProject": "logangreenmeadows"
 }
